<resources>
    <string name="app_name">MyDemoChat</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="welcome_to_timur_chat_app">Welcome to Timur \n Chat App</string>
    <string name="email" />
    <string name="password">Password</string>
    <string name="email1">Email</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="your_email">Your Email</string>
    <string name="login">LOGIN</string>
    <string name="default_status">Hi there I am using Timur Chat App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
